--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.32.0",
     "@web3modal/wagmi": "^4.1.11",
+    "@wormhole-foundation/sdk": "^0.6.8",
     "clsx": "^2.1.0",
     "ethers": "^5.7.2",
     "framer-motion": "^11.0.5",
